# opentelemetry-exporter-python

./: README.md  pyproject.toml  setup.cfg  setup.py
.circleci/: config.yml
opentelemetry/ext/honeycomb/: __init__.py  version.py
src/opentelemetry/ext/honeycomb/: __init__.py  version.py
