[tool.poetry]
name = "opentelemetry-ext-honeycomb"
version = "0.16b0"
description = "OpenTelemetry plugins for Honeycomb"
authors = ["Honeycomb Authors <solutions@honeycomb.io>"]
license = "Apache-2.0"
packages = [
	{ include = "opentelemetry" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
]

[tool.poetry.dependencies]
python = ">=3.5"
opentelemetry-api = ">=0.15b0"
opentelemetry-sdk = ">=0.15b0"
libhoney = ">=1.10.0"
[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
pycodestyle = "^2.6.0"
coverage = {version = "^5", extras = ["toml"], python = ">=3.5.0,<4"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
